[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteo_data_gee"
version = "0.1.0"
description = "ERA5-Land hourly downloader via GEE/xee with DB/WOFOST outputs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jose Gomez-Dans", email = "jose.gomez-dans@kcl.ac.uk"}]
keywords = ["ERA5-Land", "GEE", "xee", "agrometeorology", "WOFOST", "D&B"]

dependencies = [
  "xee",
  "xarray>=2023.6.0",
  "numpy>=1.25",
  "pandas>=2.0",
  "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/josegomezdans/meteo_data_gee"
Repository = "https://github.com/josegomezdans/meteo_data_gee"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
